Bug 395430 - Indentation in spaces not working in Block Selection Mode
Summary: Indentation in spaces not working in Block Selection Mode
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-15 13:40 UTC by zeta
Modified: 2019-04-13 18:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.58
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zeta 2018-06-15 13:40:20 UTC
Configure Katepart like this (From Kate's UI)

Configure Kate
..Editor Component
....Editing
......Indentation
........Indent Using
..........Spaces: SELECTED
........Indentation Actions
..........Always advance to the next tab position: SELECTED

Works fine for simple editing.

But on Block Selection Mode it inserts TABS instead of spaces.

Example: if you want to add many spaces between Col1 and Col2 in:

Col1 Col2
Col1 Col2
Col1 Col2

result is (not actually \t but a tab)
Col1 \tCol2
Col1 \tCol2
Col1 \tCol2

instead of spaces
Col1     Col2
Col1     Col2
Col1     Col2
Comment 1 Lothar 2019-04-13 18:11:10 UTC
Git commit 78a2e5d1daa5007f9c8a185415c404b189167919 by loh tar.
Committed on 13/04/2019 at 18:08.
Pushed by lohtar into branch 'master'.

DocumentPrivate: Respect indention mode when block selection

Summary:
Without this patch was in block selection mode always a tab inserted, also when
configured to use spaces on tab-key press
FIXED-IN: 5.58

Differential Revision: https://phabricator.kde.org/D19450

M  +2    -1    src/document/katedocument.cpp

https://commits.kde.org/ktexteditor/78a2e5d1daa5007f9c8a185415c404b189167919