DocumentPrivate: Respect indention mode when block selection

Summary:
Without this patch was in block selection mode always a tab inserted, also when
configured to use spaces on tab-key press

BUG: 395430
FIXED-IN: 5.58

Differential Revision: https://phabricator.kde.org/D19450